; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_port.c_ipc_port_copyout_send.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_port.c_ipc_port_copyout_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_MSG_TYPE_PORT_SEND = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@KERN_INVALID_CAPABILITY = common dso_local global i64 0, align 8
@MACH_PORT_DEAD = common dso_local global i32 0, align 4
@MACH_PORT_NULL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipc_port_copyout_send(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i64, i64* %3, align 8
  %8 = call i64 @IP_VALID(i64 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %32

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i64, i64* %3, align 8
  %13 = trunc i64 %12 to i32
  %14 = load i32, i32* @MACH_MSG_TYPE_PORT_SEND, align 4
  %15 = load i32, i32* @TRUE, align 4
  %16 = call i64 @ipc_object_copyout(i32 %11, i32 %13, i32 %14, i32 %15, i32* %5)
  store i64 %16, i64* %6, align 8
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* @KERN_SUCCESS, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %31

20:                                               ; preds = %10
  %21 = load i64, i64* %3, align 8
  %22 = call i32 @ipc_port_release_send(i64 %21)
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* @KERN_INVALID_CAPABILITY, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %20
  %27 = load i32, i32* @MACH_PORT_DEAD, align 4
  store i32 %27, i32* %5, align 4
  br label %30

28:                                               ; preds = %20
  %29 = load i32, i32* @MACH_PORT_NULL, align 4
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %28, %26
  br label %31

31:                                               ; preds = %30, %10
  br label %35

32:                                               ; preds = %2
  %33 = load i64, i64* %3, align 8
  %34 = call i32 @CAST_MACH_PORT_TO_NAME(i64 %33)
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %32, %31
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i64 @IP_VALID(i64) #1

declare dso_local i64 @ipc_object_copyout(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @ipc_port_release_send(i64) #1

declare dso_local i32 @CAST_MACH_PORT_TO_NAME(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
